Card de productos en el home

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -19,3 +19,6 @@ $fullhd-enabled:            true;
 $body-background-color:     $cremita;
 $control-border-width:      2px;
 $input-border-color:        transparent;
+$pageMargin:                2rem;
+$spacer:                    $pageMargin;
+$radius:                    13px;
