--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -21,14 +21,14 @@
 // @import '../../node_modules/bulma/sass/elements/box';
 @import '../../node_modules/bulma/sass/elements/button';
 @import '../../node_modules/bulma/sass/elements/container';
-// @import '../../node_modules/bulma/sass/elements/content';
+@import '../../node_modules/bulma/sass/elements/content';
 @import '../../node_modules/bulma/sass/elements/icon';
 // @import '../../node_modules/bulma/sass/elements/image';
 //@import '../../node_modules/bulma/sass/elements/notification';
 // @import '../../node_modules/bulma/sass/elements/progress';
 // @import '../../node_modules/bulma/sass/elements/table';
 // @import '../../node_modules/bulma/sass/elements/tag';
-// @import '../../node_modules/bulma/sass/elements/title';
+@import '../../node_modules/bulma/sass/elements/title';
 // @import '../../node_modules/bulma/sass/elements/other';
 
 /* Forms */
@@ -43,7 +43,7 @@
 /* Components */
 //@import '../../node_modules/bulma/sass/components/_all';
 // @import '../../node_modules/bulma/sass/components/breadcrumb';
-//@import '../../node_modules/bulma/sass/components/card';
+@import '../../node_modules/bulma/sass/components/card';
 // @import '../../node_modules/bulma/sass/components/dropdown';
 // @import '../../node_modules/bulma/sass/components/level';
 // @import '../../node_modules/bulma/sass/components/media';
