--- a/src/styles/components/_global.scss
+++ b/src/styles/components/_global.scss
@@ -29,3 +29,7 @@
 .has-text-space-black {
     color: $space-black !important;
 }
+
+.has-shadow {
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
+}
