Botón para modificar las cantidades a agregar al carrito

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -17,8 +17,8 @@ $fullhd-enabled:            true;
 
 // Bulma - Variables de los componentes
 $body-background-color:     $cremita;
-$control-border-width:      2px;
-$input-border-color:        transparent;
+// $control-border-width:      1px;
+// $input-border-color:        transparent;
 $pageMargin:                2rem;
 $spacer:                    $pageMargin;
 $radius:                    13px;
