--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -33,12 +33,12 @@
 
 /* Forms */
 //@import '../../node_modules/bulma/sass/form/_all';
-// @import '../../node_modules/bulma/sass/form/shared';
-// @import '../../node_modules/bulma/sass/form/input-textarea';
+@import '../../node_modules/bulma/sass/form/shared';
+@import '../../node_modules/bulma/sass/form/input-textarea';
 // @import '../../node_modules/bulma/sass/form/checkbox-radio';
 // @import '../../node_modules/bulma/sass/form/select';
 // @import '../../node_modules/bulma/sass/form/file';
-//@import '../../node_modules/bulma/sass/form/tools';
+@import '../../node_modules/bulma/sass/form/tools';
 
 /* Components */
 //@import '../../node_modules/bulma/sass/components/_all';
@@ -79,7 +79,6 @@
 
 /* Bulma Badge */
 @import '../../node_modules/@creativebulma/bulma-badge/src/sass/index';
-
 
 /* Específico del proyecto */
 @import 'components/global';
