--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -23,7 +23,7 @@
 @import '../../node_modules/bulma/sass/elements/container';
 @import '../../node_modules/bulma/sass/elements/content';
 @import '../../node_modules/bulma/sass/elements/icon';
-// @import '../../node_modules/bulma/sass/elements/image';
+@import '../../node_modules/bulma/sass/elements/image';
 //@import '../../node_modules/bulma/sass/elements/notification';
 // @import '../../node_modules/bulma/sass/elements/progress';
 // @import '../../node_modules/bulma/sass/elements/table';
