--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,17 +26,17 @@
 @import '../../node_modules/bulma/sass/elements/image';
 //@import '../../node_modules/bulma/sass/elements/notification';
 // @import '../../node_modules/bulma/sass/elements/progress';
-// @import '../../node_modules/bulma/sass/elements/table';
+@import '../../node_modules/bulma/sass/elements/table';
 // @import '../../node_modules/bulma/sass/elements/tag';
 @import '../../node_modules/bulma/sass/elements/title';
-// @import '../../node_modules/bulma/sass/elements/other';
+@import '../../node_modules/bulma/sass/elements/other';
 
 /* Forms */
 //@import '../../node_modules/bulma/sass/form/_all';
 @import '../../node_modules/bulma/sass/form/shared';
 @import '../../node_modules/bulma/sass/form/input-textarea';
 // @import '../../node_modules/bulma/sass/form/checkbox-radio';
-// @import '../../node_modules/bulma/sass/form/select';
+@import '../../node_modules/bulma/sass/form/select';
 // @import '../../node_modules/bulma/sass/form/file';
 @import '../../node_modules/bulma/sass/form/tools';
 
