--- a/src/styles/components/_global.scss
+++ b/src/styles/components/_global.scss
@@ -33,3 +33,14 @@
 .has-shadow {
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+.list-item {
+    background-color: white;
+    margin-bottom: 5px;
+    padding: 10px;
+}
+
+.list-item li span {
+    font-size: 20px;
+    font-weight: 600;
+}
