--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -42,7 +42,7 @@
 
 /* Components */
 //@import '../../node_modules/bulma/sass/components/_all';
-// @import '../../node_modules/bulma/sass/components/breadcrumb';
+@import '../../node_modules/bulma/sass/components/breadcrumb';
 @import '../../node_modules/bulma/sass/components/card';
 // @import '../../node_modules/bulma/sass/components/dropdown';
 // @import '../../node_modules/bulma/sass/components/level';
@@ -82,3 +82,4 @@
 
 /* Específico del proyecto */
 @import 'components/global';
+@import 'components/spinner';
