--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -27,7 +27,7 @@
 //@import '../../node_modules/bulma/sass/elements/notification';
 // @import '../../node_modules/bulma/sass/elements/progress';
 @import '../../node_modules/bulma/sass/elements/table';
-// @import '../../node_modules/bulma/sass/elements/tag';
+@import '../../node_modules/bulma/sass/elements/tag';
 @import '../../node_modules/bulma/sass/elements/title';
 @import '../../node_modules/bulma/sass/elements/other';
 
