--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -36,7 +36,7 @@
 @import '../../node_modules/bulma/sass/form/shared';
 @import '../../node_modules/bulma/sass/form/input-textarea';
 // @import '../../node_modules/bulma/sass/form/checkbox-radio';
-@import '../../node_modules/bulma/sass/form/select';
+// @import '../../node_modules/bulma/sass/form/select';
 // @import '../../node_modules/bulma/sass/form/file';
 @import '../../node_modules/bulma/sass/form/tools';
 
